# Dempt

./: CMakeLists.txt  README.md
Includes/AMD/: Utility.hpp
Source/Backend/: Temp.cpp  Temp.h
Source/UI/: UI.cpp
